--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: #1a1a1a;
   /* Set the background image */
@@ -131,7 +135,7 @@ body {
 .navbar-sticky {
   background: white;
   position: fixed;
-  top: 0;
+  top: 1%;
   left: 5%;
   animation: moveDown 0.5s ease-in-out;
   width: 90%;
@@ -147,6 +151,7 @@ body {
 
 .navbar--logo-holder h1 {
   font-weight: 500;
+  cursor: pointer;
 }
 
 .navbar--logo {
@@ -165,6 +170,12 @@ body {
   margin: 0.4rem 1rem 0 0;
   padding: 0 0.3rem;
   cursor: pointer;
+  /* color: #000; */
+  /* font-weight: 400; */
+}
+
+.navbar--link-item a{
+  text-decoration: none;
   color: #000;
   font-weight: 400;
 }
@@ -870,7 +881,7 @@ footer {
   color: white;
 }
 
-footer .navbar--link-item {
+footer .navbar--link-item a{
   color: white;
 }
 
