small-changes-in-citation

--- a/src/styles.css
+++ b/src/styles.css
@@ -765,10 +765,10 @@ div.playlist-box {
 }
 
 .citations-section{
-  width: 65%;
+  width: 80%;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 3rem;
 }
 
