--- a/src/styles.css
+++ b/src/styles.css
@@ -626,7 +626,7 @@ div.playlist-box {
 
 .video-section>div {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 2rem;
   width: 90%;
   margin: 0 auto;
